--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,11 @@
         "symfony/security-bundle": "6.4.*",
         "symfony/security-core": "6.4.*",
         "symfony/security-http": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
         "symfony/validator": "6.4.*",
-        "symfony/yaml": "6.4.*"
+        "symfony/yaml": "6.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
