--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.0",
+        "fakerphp/faker": "^1.24",
         "symfony/maker-bundle": "*"
     }
 }
