--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,9 @@ security:
                 # where to redirect after logout
                 # target: app_any_route
 
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -34,7 +37,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
