--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "fakerphp/faker": "^1.24",
         "phpunit/phpunit": "^9",
+        "symfony/browser-kit": "6.4.*",
         "symfony/maker-bundle": "*",
         "symfony/phpunit-bridge": "^7.2"
     }
