--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.3",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
+        "symfony/css-selector": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/form": "6.4.*",
