--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,8 @@
         "fakerphp/faker": "^1.24",
         "phpunit/phpunit": "^9",
         "symfony/browser-kit": "6.4.*",
-        "symfony/maker-bundle": "*",
-        "symfony/phpunit-bridge": "^7.2"
+        "symfony/maker-bundle": "^1.62",
+        "symfony/phpunit-bridge": "^7.2",
+        "symfony/web-profiler-bundle": "6.4.*"
     }
 }
