--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,10 +20,12 @@ security:
                 check_path: login_check
                 enable_csrf: true
                 default_target_path: homepage
+                always_use_default_target_path: false
+                failure_path: /login
             logout:
                 path: logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: homepage
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
