--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            pattern: ^/
             form_login:
                 login_path: login
                 check_path: login_check
@@ -23,7 +24,7 @@ security:
                 always_use_default_target_path: false
                 failure_path: /login
             logout:
-                path: logout
+                path: /logout
                 # where to redirect after logout
                 target: homepage
 
